--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -15,6 +15,8 @@
 
        </head>
                 <body>
+
+                <img src="icon.jpg" alt="logo" style="width:304px;height:228px">
                 <script>
 				  window.fbAsyncInit = function() {
 				    FB.init({
