--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -16,7 +16,7 @@
        </head>
                 <body>
 
-                <img src="icon.jpg" alt="logo" style="width:304px;height:228px">
+                <img src="image/icon.jpg" alt="logo" style="width:304px;height:228px">
                 <script>
 				  window.fbAsyncInit = function() {
 				    FB.init({
