--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -15,8 +15,8 @@
 
        </head>
                 <body>
+                <img src="http://s9.postimg.org/vo96z779r/icon.jpg" alt="panda">
 
-                <img src="js/icon.jpg" alt="logo" style="width:304px;height:228px">
                 <script>
 				  window.fbAsyncInit = function() {
 				    FB.init({
