--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -263,6 +263,9 @@
 
                 <br> <br> <br> <br> <br> <br> <br> <br>
                 <div class="footer">
+                    <SPAN style="position: absolute; top: 80px; left: 800px;width: 500px; height: 500px">
+                    <img src="http://s9.postimg.org/vo96z779r/icon.jpg" alt="panda">
+                        </SPAN>
                     <div class="footer_menu">
                         <a href="#" data-reveal-id="myModal">Team Info</a>
                     </div>
@@ -276,7 +279,9 @@
                         <p>Sampurna Basu</p>
                         <p>Da Young Joanne Kwon</p>
                         <p>Ben Lee</p>
-                        <img src="http://s9.postimg.org/vo96z779r/icon.jpg" alt="panda">
+                        <SPAN style="position: absolute; top: 80px; left: 500px;width: 500px; height: 500px">
+                        <img src="http://s27.postimg.org/s1rqvxccz/group_picture.jpg" alt="Family">
+                         </SPAN>
                 </div>
     </div>
 
