--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -50,9 +50,7 @@
                         <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="true"></div>
                     </p>
                 <h2><big>Who is studying?</big>
-                    <SPAN style="position: absolute; top: 80px; left: 850px;width: 500px; height: 500px">
-                        <img src="http://s15.postimg.org/mp5xn1ngr/USC_seal_2400x750_rgb.jpg" alt="USC">
-                         </SPAN>
+
                 </h2>
                      <div class="NewSessionButton">
                       <a href="#" class="button" id="session">Create New Study Session</a>
@@ -269,8 +267,8 @@
                 <div class="footer">
 
                     <div class="footer_menu">
-                         <SPAN style="position: absolute; top: 100px; left: 50px;width: 500px; height: 500px">
-                        <a href="#" data-reveal-id="myModal"><big>Developer Info</big></a>
+                         <SPAN style="position: absolute; top: 600px; left: 500px;width: 500px; height: 500px">
+                        <a href="#" data-reveal-id="myModal">Developer Info</a>
                     </div>
 
                     <div id="myModal" class="reveal-modal" data-reveal>
