--- a/StudyOn/facebooktest.html
+++ b/StudyOn/facebooktest.html
@@ -24,7 +24,7 @@
         <br>
         
         <p>
-        	<div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="true"></div>
+        	<div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="true"></div>
         </p>
         <br>
         
