--- a/StudyOn/StudyOn.html
+++ b/StudyOn/StudyOn.html
@@ -4,6 +4,7 @@
         <head>
                     
       <link rel="stylesheet" href="css/foundation.css">
+      <link rel="stylesheet" href="css/style.css">
       <script src="js/vendor/jquery.js"></script>
       <script src="js/vendor/modernizr.js"></script>
       <script src="js/foundation.min.js"></script>
@@ -16,9 +17,13 @@
        </head>
                 
                 <body>
-
-                    <h1>StudyOn</h1>
-                     <h1>Who is studying?</h1>
+                <div id="content">
+                    <h1>
+                        <span class="study">Study</span>
+                        <span class="on ">On</span>
+                    </h1>
+                </div>
+                     <h2>Who is studying?</h2>
                     <p>
                         <div>
                     <a href="">Login</a>
