--- a/StudyOn/StudyOn.html
+++ b/StudyOn/StudyOn.html
@@ -106,6 +106,7 @@
     <div id="panel1" class="content active">
        <p>Subject | Location | Start Time | Date</p>
         <a href="#" class="button [tiny small large]">Chat</a>
+          <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
   <dd class="accordion-navigation">
@@ -113,6 +114,7 @@
     <div id="panel2" class="content">
       <p>Subject | Location | Start Time | Date</p>
        <a href="#" class="button [tiny small large]">Chat</a>
+         <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
   <dd class="accordion-navigation">
@@ -120,6 +122,95 @@
     <div id="panel3" class="content">
       <p>Subject | Location | Start Time | Date</p>
        <a href="#" class="button [tiny small large]">Chat</a>
+        <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+ </dl>
+</div>
+
+
+<div id="class2Data">
+ <dl class="accordion" data-accordion>
+  <dd class="accordion-navigation">
+    <a href="#panel1">History Chapter 10! Help!!</a>
+    <div id="panel1" class="content active">
+       <p>Subject | Location | Start Time | Date</p>
+        <a href="#" class="button [tiny small large]">Chat</a>
+          <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+  <dd class="accordion-navigation">
+    <a href="#panel2"> Want to check notes and review together? Join us!</a>
+    <div id="panel2" class="content">
+      <p>Subject | Location | Start Time | Date</p>
+       <a href="#" class="button [tiny small large]">Chat</a>
+         <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+  <dd class="accordion-navigation">
+    <a href="#panel3">I have midterm from last year.Wanna review together?</a>
+    <div id="panel3" class="content">
+      <p>Subject | Location | Start Time | Date</p>
+       <a href="#" class="button [tiny small large]">Chat</a>
+        <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+ </dl>
+</div>
+
+<div id="class3Data">
+ <dl class="accordion" data-accordion>
+  <dd class="accordion-navigation">
+    <a href="#panel1">Let's work together on final exam!</a>
+    <div id="panel1" class="content active">
+       <p>Subject | Location | Start Time | Date</p>
+        <a href="#" class="button [tiny small large]">Chat</a>
+          <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+  <dd class="accordion-navigation">
+    <a href="#panel2"> TA Phil says he is going to help us check outlines for paper today.Join us!</a>
+    <div id="panel2" class="content">
+      <p>Subject | Location | Start Time | Date</p>
+       <a href="#" class="button [tiny small large]">Chat</a>
+         <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+  <dd class="accordion-navigation">
+    <a href="#panel3">History is Horrible! Help</a>
+    <div id="panel3" class="content">
+      <p>Subject | Location | Start Time | Date</p>
+       <a href="#" class="button [tiny small large]">Chat</a>
+        <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+ </dl>
+</div>
+
+<div id="class4Data">
+ <dl class="accordion" data-accordion>
+  <dd class="accordion-navigation">
+    <a href="#panel1">Linked List Review! Let's do it together for upcoming midterm</a>
+    <div id="panel1" class="content active">
+       <p>Subject | Location | Start Time | Date</p>
+        <a href="#" class="button [tiny small large]">Chat</a>
+          <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+  <dd class="accordion-navigation">
+    <a href="#panel2"> HW5. Iterator Review. I got someone knows well to help</a>
+    <div id="panel2" class="content">
+      <p>Subject | Location | Start Time | Date</p>
+       <a href="#" class="button [tiny small large]">Chat</a>
+         <a href="#" class="button [tiny small large]">Join</a>
+    </div>
+  </dd>
+  <dd class="accordion-navigation">
+    <a href="#panel3">Accordion 3</a>
+    <div id="panel3" class="content">
+      <p>Subject | Location | Start Time | Date</p>
+       <a href="#" class="button [tiny small large]">Chat</a>
+        <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
  </dl>
