--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -34,8 +34,9 @@
                       <a href="#" class="button" id="session">Create New Study Session</a>
                      </div>
 
+                <div id="container" style="width:100%;">
 
-
+                <div id="left" style="float:left; width:30%;">
   <form>
 <div class="NewSession">
   <div class="row">
@@ -102,8 +103,8 @@
   <li><a href="#" id="class3">EALC 110</a></li>
   <li><a href="#" id="class4">EE 101</a></li>
 </ul>
-
-
+                </div>
+                <div id="right" style="float:right; width:70%;">
 <div id="class1Data">
  <dl class="accordion" data-accordion>
   <dd class="accordion-navigation">
@@ -223,10 +224,10 @@
 
 
       <p>Forum</p>
+                </div>
+                </div>
 
-      
-
-    <a href="#" data-reveal-id="myModal">Team Info</a>
+                <a href="#" data-reveal-id="myModal">Team Info</a>
       <div id="myModal" class="reveal-modal" data-reveal>
       <h2>GO Panda_Hackerz!! :)</h2>
       <p class="lead">TEAM MEMBERS</p>
