--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -40,7 +40,7 @@
                         <span class="on ">On</span>
                     </h1>
                 </div>
-                     <h2>Who is studying?</h2>
+
                     <p>
                     	<div
 						  class="fb-like"
@@ -50,7 +50,7 @@
 						</div>
                         <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="true"></div>
                     </p>
-
+                <h2>Who is studying?</h2>
                      <div class="NewSessionButton">
                       <a href="#" class="button" id="session">Create New Study Session</a>
                      </div>
@@ -250,6 +250,9 @@
                 </div>
                 </div>
 
+
+                <div class="footer">
+                    <p>Copyright (c) 2008
                 <a href="#" data-reveal-id="myModal">Team Info</a>
       <div id="myModal" class="reveal-modal" data-reveal>
       <h2>GO Panda_Hackerz!! :)</h2>
@@ -273,6 +276,8 @@
         <li><a href="#">Help</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+                    </p>
+                </div>
     </div>
 
 
