--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -102,12 +102,13 @@
       </label>
     </div>
   </div>
-
-
- <div class="create_option">
+    <div id="container" style="width:100%;">
+ <div class="create_option", style="float:left; width:50%;" >
    <a href="#" class="button">Create</a>
-  <div class="cancel_button">
+
+  <div class="cancel_button" style="float:right; width:50%;">
    <a href="#" class="button">Cancel</a>
+
   </div>
  </div>
 </form>
