--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -89,7 +89,7 @@
 
  <div class="row">  
     <div class="large-4 columns">
-      <label>Sarting Time
+      <label>Starting Time
         <input type="text" placeholder="Where " />
       </label>
     </div>
