--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -122,10 +122,10 @@
                     <div id="left" style="float:left; width:20%;">
 
 <ul class="side-nav">
-  <li><a href="#" id="class1">CSCI 104</a></li>
-  <li><a href="#" id="class2">HIS 100</a></li>
-  <li><a href="#" id="class3">EALC 110</a></li>
-  <li><a href="#" id="class4">EE 101</a></li>
+  <li style = font-family:"Oswald"><a href="#" id="class1">CSCI 104</a></li>
+  <li style = font-family:"Oswald"><a href="#" id="class2">HIS 100</a></li>
+  <li style = font-family:"Oswald"><a href="#" id="class3">EALC 110</a></li>
+  <li style = font-family:"Oswald"><a href="#" id="class4">EE 101</a></li>
 </ul>
                 </div>
                 <div id="right" style="float:right; width:80%;">
@@ -171,6 +171,7 @@
           <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
+     <br>
   <dd class="accordion-navigation">
     <a href="#panel2"> Want to check notes and review together? Join us!</a>
     <div id="panel2" class="content">
@@ -179,6 +180,7 @@
          <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
+     <br>
   <dd class="accordion-navigation">
     <a href="#panel3">I have midterm from last year.Wanna review together?</a>
     <div id="panel3" class="content">
@@ -200,6 +202,7 @@
           <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
+     <br>
   <dd class="accordion-navigation">
     <a href="#panel2"> TA Phil says he is going to help us check outlines for paper today.Join us!</a>
     <div id="panel2" class="content">
@@ -208,6 +211,7 @@
          <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
+     <br>
   <dd class="accordion-navigation">
     <a href="#panel3">History is Horrible! Help</a>
     <div id="panel3" class="content">
@@ -229,6 +233,7 @@
           <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
+     <br>
   <dd class="accordion-navigation">
     <a href="#panel2"> HW5. Iterator Review. I got someone knows well to help</a>
     <div id="panel2" class="content">
@@ -237,6 +242,7 @@
          <a href="#" class="button [tiny small large]">Join</a>
     </div>
   </dd>
+     <br>
   <dd class="accordion-navigation">
     <a href="#panel3">Accordion 3</a>
     <div id="panel3" class="content">
@@ -259,15 +265,15 @@
 
                 <br> <br> <br> <br> <br> <br> <br> <br>
                 <div class="footer">
-                    <p>
+                    <div class="footer_menu">
       <!-- Menu -->
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Help</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-                    </p>
+
+        <a href="#">About</a> |
+        <a href="#">Blog</a> |
+        <a href="#">Help</a> |
+        <a href="#">Contact</a>
+
+                    </div>
                     <a href="#" data-reveal-id="myModal">Team Info</a>
                     <div id="myModal" class="reveal-modal" data-reveal>
                         <h2>GO Panda_Hackerz!! :)</h2>
