--- a/StudyOn/index.html
+++ b/StudyOn/index.html
@@ -88,8 +88,8 @@
 
  <div class="row">  
     <div class="large-4 columns">
-      <label>Sarting Time
-        <input type="text" placeholder="Where " />
+      <label>Starting Time
+        <input type="text" placeholder="When " />
       </label>
     </div>
  </div>
@@ -97,7 +97,7 @@
   <div class="row">
     <div class="large-4 columns">
       <label>Description 
-        <textarea placeholder="Plese describe study content briefly"></textarea>
+        <textarea placeholder="Please describe study content briefly"></textarea>
       </label>
     </div>
   </div>
@@ -264,15 +264,9 @@
                 <br> <br> <br> <br> <br> <br> <br> <br>
                 <div class="footer">
                     <div class="footer_menu">
-      <!-- Menu -->
-
-        <a href="#">About</a> |
-        <a href="#">Blog</a> |
-        <a href="#">Help</a> |
-        <a href="#">Contact</a>
-
+                        <a href="#" data-reveal-id="myModal">Team Info</a>
                     </div>
-                    <a href="#" data-reveal-id="myModal">Team Info</a>
+
                     <div id="myModal" class="reveal-modal" data-reveal>
                         <h2>GO Panda_Hackerz!! :)</h2>
                         <p class="lead">TEAM MEMBERS</p>
